# SDLProject

./: .gitignore  CMakeLists.txt  README.md  install_dependency.sh  launch.json  main.cpp
Examples/: dummy_game_example.txt  simple_examples.txt
src/Food/: CMakeLists.txt
src/Food/include/: food.h  food_factory.h
src/Food/src/: food.cpp
src/RenderManager/: CMakeLists.txt
src/RenderManager/include/: render_manager.h
src/RenderManager/src/: render_manager.cpp
src/Snake/: CMakeLists.txt
src/Snake/include/: Snake.h  snake_factory.h
src/Snake/src/: Snake.cpp
util/: CMakeLists.txt
util/include/: Logger.h
util/src/: Logger.cpp
